// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should contain correct values for themeDark 1`] = `
{
  "background": {
    "base": "#0e1418",
    "shading": "rgba(14, 20, 24, 0.9)",
    "surface": "#262b2e",
  },
  "base": "#fff",
  "brand": "#d5001c",
  "contrast": {
    "high": "#e3e4e5",
    "low": "#4a4e51",
    "medium": "#b0b1b2",
  },
  "notification": {
    "error": "#fc1717",
    "errorSoft": "#fec5c5",
    "neutral": "#2193ff",
    "neutralSoft": "#c7e4ff",
    "success": "#01ba1d",
    "successSoft": "#bfeec6",
    "warning": "#ff9b00",
    "warningSoft": "#ffe6bf",
  },
  "state": {
    "active": "#ff0223",
    "disabled": "#7c7f81",
    "focus": "currentColor",
    "hover": "#ff0223",
  },
}
`;

exports[`should contain correct values for themeDarkElectric 1`] = `
{
  "background": {
    "base": "#0e1418",
    "shading": "rgba(14, 20, 24, 0.9)",
    "surface": "#262b2e",
  },
  "base": "#fff",
  "brand": "#00b0f4",
  "contrast": {
    "high": "#e3e4e5",
    "low": "#4a4e51",
    "medium": "#b0b1b2",
  },
  "notification": {
    "error": "#fc1717",
    "errorSoft": "#fec5c5",
    "neutral": "#2193ff",
    "neutralSoft": "#c7e4ff",
    "success": "#01ba1d",
    "successSoft": "#bfeec6",
    "warning": "#ff9b00",
    "warningSoft": "#ffe6bf",
  },
  "state": {
    "active": "#00b0f4",
    "disabled": "#7c7f81",
    "focus": "currentColor",
    "hover": "#00b0f4",
  },
}
`;

exports[`should contain correct values for themeLight 1`] = `
{
  "background": {
    "base": "#fff",
    "shading": "rgba(14, 20, 24, 0.9)",
    "surface": "#f2f2f2",
  },
  "base": "#000",
  "brand": "#d5001c",
  "contrast": {
    "high": "#323639",
    "low": "#e3e4e5",
    "medium": "#626669",
  },
  "notification": {
    "error": "#e00000",
    "errorSoft": "#fae6e6",
    "neutral": "#0061bd",
    "neutralSoft": "#e5eff8",
    "success": "#018a16",
    "successSoft": "#e5f3e7",
    "warning": "#ff9b00",
    "warningSoft": "#fff5e5",
  },
  "state": {
    "active": "#d5001c",
    "disabled": "#96989a",
    "focus": "currentColor",
    "hover": "#d5001c",
  },
}
`;

exports[`should contain correct values for themeLightElectric 1`] = `
{
  "background": {
    "base": "#fff",
    "shading": "rgba(14, 20, 24, 0.9)",
    "surface": "#f2f2f2",
  },
  "base": "#000",
  "brand": "#00b0f4",
  "contrast": {
    "high": "#323639",
    "low": "#e3e4e5",
    "medium": "#626669",
  },
  "notification": {
    "error": "#e00000",
    "errorSoft": "#fae6e6",
    "neutral": "#0061bd",
    "neutralSoft": "#e5eff8",
    "success": "#018a16",
    "successSoft": "#e5f3e7",
    "warning": "#ff9b00",
    "warningSoft": "#fff5e5",
  },
  "state": {
    "active": "#00b0f4",
    "disabled": "#96989a",
    "focus": "currentColor",
    "hover": "#00b0f4",
  },
}
`;
